--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,18 @@
       <version>1.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>2.1.214</version>
+    </dependency>
+
   </dependencies>
+
   <build>
+
     <finalName>carstore</finalName>
+
     <plugins>
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
@@ -57,13 +66,12 @@
       </plugin>
 
       <plugin>
-
-      <artifactId>maven-war-plugin</artifactId>
-      <version>3.2.2</version>
-      <configuration>
-        <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-        <warSourceDirectory>src/main/webapp</warSourceDirectory>
-      </configuration>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.2</version>
+        <configuration>
+          <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+          <warSourceDirectory>src/main/webapp</warSourceDirectory>
+        </configuration>
       </plugin>
 
     </plugins>
@@ -71,4 +79,3 @@
   </build>
 
 </project>
-
